--- a/css/style.css
+++ b/css/style.css
@@ -78,7 +78,7 @@ html{
     position: absolute;
     top: 0px;
     left: 0px;
-    background: url('img/bg0.jpg') no-repeat center center/cover;
+    background: url('./img/bg0.jpg') no-repeat center center/cover;
     height: 620px;
     width: 100%;
     z-index: -1;
