--- a/css/style.css
+++ b/css/style.css
@@ -78,7 +78,7 @@ html{
     position: absolute;
     top: 0px;
     left: 0px;
-    background: url('./img/bg0.jpg') no-repeat center center/cover;
+    background: url('bg0.jpg') no-repeat center center/cover;
     height: 620px;
     width: 100%;
     z-index: -1;
@@ -128,7 +128,7 @@ html{
 #client-section::before{
     content: "";
     position: absolute;
-    background: url('img/bg.jpg') no-repeat center center/cover;
+    background: url('bg.jpg') no-repeat center center/cover;
     height: 100%;
     width: 100%;
     z-index: -1;
@@ -160,7 +160,7 @@ html{
     height: 100%;
     z-index: -1;
     opacity: 0.7;
-    background: url('img/contact.jpg') no-repeat center center/cover;
+    background: url('contact.jpg') no-repeat center center/cover;
 }
 
 /* Contact section */
